--- a/src/config/__styles.scss
+++ b/src/config/__styles.scss
@@ -129,7 +129,7 @@ th, td {
 }
 @media only screen and (max-width: 414px) {
     .hideOnMobile{
-        display: none!important;
+        display: none;
     }
 }
 
