--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -86,8 +86,8 @@
     flex-wrap: wrap;
 
     &_container{
-        width:214px;
-        height: 295px;
+        // width:214px;
+        // height: 295px;
         border: 1px solid $grey;
         margin: 7px;
         box-sizing: border-box;
