--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -3,6 +3,24 @@ a{
     text-decoration: none;
     color:black;
 }
+.products_container{
+    display: flex;
+    flex-wrap: wrap;
+
+    &_container{
+        width:214px;
+        height: 295px;
+        border: 1px solid $grey;
+        margin: 7px;
+        box-sizing: border-box;
+        border-radius: $border-radius_card;
+    }
+
+    &_container:hover{
+        box-shadow: $shadow_big;
+        border:none;
+    }
+}
 .product_card_container{
     width: 100%;
     height: 100%;
