--- a/src/pages/Merchant/MerchantProfile/MerchantProfile.scss
+++ b/src/pages/Merchant/MerchantProfile/MerchantProfile.scss
@@ -41,10 +41,17 @@
     }
 
 }
+@media only screen and (max-width: 1023px) {
+    .merchant_profile_container {
+        margin-left: 50px;
+    }
+}
 
 @media only screen and (max-width: 767px) {
     .merchant_profile_container {
         padding: 30px 40px;
+        margin-left: 0;
+
     }
     .merchant_profile_container_box .MuiGrid-container .merchant_profile_container_box_content{
         margin-bottom: 0;
