--- a/src/pages/Merchant/MerchantTransaction/MerchantTransaction.scss
+++ b/src/pages/Merchant/MerchantTransaction/MerchantTransaction.scss
@@ -1,8 +1,13 @@
 @import '../../../config/_styles.scss';
 
+.merchant_pagination_container {
+    width: 70%;
+}
 .merchant_tran_container{
     &_bottom{
-        padding: 0 $content_vertical $content_vertical $content_vertical;
+        // width: 75%!important;
+        padding: 0 0 $content_vertical 0;
+        // padding: 0 $content_vertical $content_vertical $content_vertical;
         box-sizing: border-box;
         table{
             .merchant_tran_container_bottom_body{
@@ -13,7 +18,7 @@
                     .merchant_tran_container_status_container{
                         text-align: center;
                         .merchant_tran_container_Shipped{
-                            width: auto;
+                          width: auto;
                           color:rgb(15,93,38)!important;
                           border-radius: 16px;
                           padding:5px 10px;
@@ -22,7 +27,7 @@
                           text-align: center;
                         }
                         .merchant_tran_container_Processing{
-                            width: auto;
+                          width: auto;
                           color:rgb(9,107,222)!important;
                           border-radius: 16px;
                           padding:5px 10px;
@@ -48,7 +53,7 @@
                         height: 100px;
                         img{
                             width: 100%;
-                            height: 100%;
+                            // height: 100%;
                         }
                     }
                     th, td{
@@ -135,6 +140,22 @@
         }
         .add_confirm_btn:hover{
             background-color: $red_shadow;
+        }
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+    .merchant_tran_container{
+        &_bottom{
+            // width: 75%!important;
+        }
+    }
+}
+@media only screen and (max-width: 767px) {
+    .merchant_pagination_container {
+        margin:0 auto;
+        .MuiTablePagination-toolbar {
+            padding-right: 0;
         }
     }
 }
